--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,10 +1,14 @@
+*{
+    margin:0;
+    padding: 0;;
+}
+
 body{
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #85FFBD;
-background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+    background-image: linear-gradient( 135deg, #65FDF0 10%, #1D6FA3 100%);
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .loginContainer{
@@ -12,16 +16,15 @@ height: 30vh;
 width: 30vw;
 border: 3px solid rgba(0, 0,0 , 0.368);  
 box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-background-color: #8BC6EC;
-background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(249,232,51,1) 0%, rgba(250,196,59,1) 100.2% );
 color:white;
 border-radius: 12px;
-animation: slideUp 1.5s ease-in-out ;
+animation: slideUp 1.6s ease-out  ;
 }
 @keyframes slideUp {
     from{
         position: relative;
-        bottom:-400px;
+        bottom:-500px;
     }
     to{
         position: relative;
