changed color scheme
changed some of the background colors

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,9 +10,13 @@
 <body>
 
     <div class="loginContainer">
-
+        
     </div>
-
+    <div class="right">
+        <form action="/login">
+            
+        </form>
+    </div>
     
 </body>
 </html>
