--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,13 +10,15 @@
 <body>
 
     <div class="loginContainer">
-        
+        <div class="right">
+            <form action="/login">
+                <input class= "element" type="email" placeholder="Enter Your Email">
+                <input class= "element" type="password" placeholder="Enter Password">
+                <button class= "element" type="submit">Login</button>
+            </form>
+        </div>
     </div>
-    <div class="right">
-        <form action="/login">
-            
-        </form>
-    </div>
+    
     
 </body>
 </html>
