--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,9 +12,9 @@
     <div class="loginContainer">
         <div class="right">
             <form action="/login">
-                <input class= "element" type="email" placeholder="Enter Your Email">
+                <input class= "element" type="email" placeholder="Enter Email">
                 <input class= "element" type="password" placeholder="Enter Password">
-                <button class= "element" type="submit">Login</button>
+                <button class= "element" type="submit"><h3>Login</h3></button>
             </form>
         </div>
     </div>
