--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -44,12 +44,25 @@ form{
     justify-content: space-between;
     /* width: 50%; */
     /* flex-direction: column; */
+
+}
+
+::-webkit-input-placeholder{
+    color: turquoise;
+    text-align: center;
+    font-family: 'Comme', sans-serif;
+    font-size: 16px;
 }
 
 .element{
     height: 40px;
-    width: 300px;
-    /* padding: 20px;
-     */
-     margin: 20px;
+    width: 280px;
+    margin: 20px;
+    border: 3px solid rgba(255, 204, 0, 0.45);
+    background-color: #2f5e4e;
+    border-radius: 12px;
+}
+
+h3{
+    color: turquoise;
 }
