--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productimer</title>
-    <link rel="stylesheet" href="css/js-snackbar.css">
+  
     
     <link rel="stylesheet" href="login.css">
 </head>
@@ -24,10 +24,18 @@
     </div>
     
     
+    <!-- this snackbar will glide up whenever there is error
+    or success -->
+<div id="snackbar">
 
-<script src="https://cdn.skypack.dev/wc-toast">
+<%= message  %>
+</div>
 
-toast('This is a notification!');
+
+<script>
+  
+
+
 </script>
 
 
