--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,6 +22,13 @@
         </div>
     </div>
     
+      <!-- this snackbar will glide up whenever there is error
+    or success -->
+<div id="snackbar">
+
+    <%= message  %>
+    </div>
+    
     
 </body>
 </html>
