--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -65,6 +65,14 @@ form{
     font-size: large;
     background-color: #2f5e4e;
     border-radius: 12px;
+    cursor:pointer;
+    transition: all 0.4s;
+}
+.element:hover{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transform: translateY(200px);
+    transform: scale(1.1);
+
 }
 
 h3{
