--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,8 +15,8 @@
     <div class="loginContainer">
         <div class="right">
             <form action="/login" method="post">
-                <input class= "element" type="email" placeholder="Enter Email" name="email">
-                <input class= "element" type="password" placeholder="Enter Password" name="password">
+                <input class= "element" type="email" placeholder="Enter Email" name="email" required>
+                <input class= "element" type="password" placeholder="Enter Password" name="password" required>
                 <button class= "element" type="submit"><h3>Login</h3></button>
             </form>
             <a href="/register">Don't have an account?</a>
