--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productimer</title>
-    <link rel="stylesheet" href="css/js-snackbar.css">
-    <script src="js/js-snackbar.js"></script>
+    
     <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
 
