--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -14,10 +14,12 @@ body{
     background-image: linear-gradient( 135deg, #50aa8d 40%, #2f5e4e 100%);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+ 
 .loginContainer,.registerContainer{
     height: 46vh;  
 width: 46vw;
 border: 7px solid rgba(255, 204, 0, 0.45);  
+box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 /* background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgb(230, 213, 129) 0%, rgba(250,196,59,1) 100.2% ); */
 background-color: #ffeda4;
@@ -44,7 +46,7 @@ transition: box-shadow 0.6s ease-in-out;
     background-image: linear-gradient( 135deg, #90F7EC 10%, #32CCBC 100%);
 
 box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+/* background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%); */
 color:white;
 border-radius: 12px;
 animation: slideUp 1.5s ease-in-out ;
@@ -102,9 +104,6 @@ form{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     transform: translateY(200px);
     transform: scale(1.1);
-    text-shadow: 3px 0px 19px rgba(255, 255, 255, 0.6);
-    
-
 
 }
 h3{
