--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -31,7 +31,10 @@ transition: box-shadow 0.6s ease-in-out;
 }
 
 .loginContainer:hover,.registerContainer:hover{
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;;}
+
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;;
+
+}
 
 
 @keyframes slideUp {
@@ -40,17 +43,7 @@ transition: box-shadow 0.6s ease-in-out;
         bottom:-500px;
     }
 }
-.loginContainer{
-    height: 30vh;  
-    width: 30vw;
-    background-image: linear-gradient( 135deg, #90F7EC 10%, #32CCBC 100%);
 
-box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-/* background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%); */
-color:white;
-border-radius: 12px;
-animation: slideUp 1.5s ease-in-out ;
-}
 @keyframes slideUp {
     from{
         position: relative;
