changes some ui on login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-
+    <h1 id="heading">FOCUSPRO</h1>
     <div class="loginContainer">
-
+        <div class="left">
+            <img src="https://media.tenor.com/fEyZrLV4q8IAAAAC/tree-plant.gif" alt="sorry">
+        </div>
         <div class="right">
             <form action="/login" method="post">
                 <input class= "element" type="email" placeholder="Enter Email" name="email" required>
