--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,95 +1,100 @@
-h1{
+h1 {
     font-family: 'Courier New', Courier, monospace;
-    color:red;
+    color: red;
 }
-*{
-    margin:0;
-    padding:0;
+
+* {
+    margin: 0;
+    padding: 0;
 }
 
 
 #menu {
-   
+
     background-color: turquoise;
     width: 300px;
     height: 100%;
-    position:absolute;
- left:-300px;
+    position: absolute;
+    left: -300px;
     display: flex;
     justify-content: center;
     align-items: center;
-   
-
     transition: all 0.4s;
 }
- .menuToggle{
-    transform:translateX(300px);
+
+.menuToggle {
+    transform: translateX(300px);
     transition: all 0.4s;
 
 }
 
- .options{
+.options {
     height: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-#menu ul li{
-text-decoration: none;
-list-style: none;
-font-size: 5vh;
-margin:2rem 0;
-cursor: pointer;
-transition: all 0.4s;
-text-shadow: 1px 1px 3px white;
+
+#menu ul li {
+    text-decoration: none;
+    list-style: none;
+    font-size: 5vh;
+    margin: 2rem 0;
+    cursor: pointer;
+    transition: all 0.4s;
+    text-shadow: 1px 1px 3px white;
 }
-#logoutBtn{
+
+#logoutBtn {
     font-size: 4vh;
     background-color: transparent;
     text-shadow: 1px 1px 3px white;
 
     text-align: left;
-   border:none;
+    border: none;
     margin-right: 10px;
     padding-left: 0;
     transition: all 0.4s;
 }
-#logoutBtn:hover{
+
+#logoutBtn:hover {
     background-color: rgb(238, 55, 23);
-    padding:10px 20px; 
-    color:white;
-    border-radius: 12px;;
-    cursor:pointer
+    padding: 10px 20px;
+    color: white;
+    border-radius: 12px;
+    ;
+    cursor: pointer
 }
-#menu  ul li:hover{
-    color:white;
+
+#menu ul li:hover {
+    color: white;
     padding-bottom: 20px;
     /* transform: scale(1.2); */
     text-shadow: 1px 1px 3px black;
-    transform: scale(1.1) 
-
+    transform: scale(1.1)
 }
 
-#sidemenuButton{
-    position:absolute;
-    left:10px;
+#sidemenuButton {
+    position: absolute;
+    left: 10px;
     width: 5%;
     height: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-#sidemenuButton span{
+#sidemenuButton span {
     width: 40%;
-    margin:0.3px;
-   height: 3px;
+    margin: 0.3px;
+    height: 3px;
     background-color: rgb(62, 60, 60);
-    
-    transition:all 0.4s;
+
+    transition: all 0.4s;
 
 }
-#sidemenuButton:hover{
-color:white;
+
+#sidemenuButton:hover {
+    color: white;
 }
