--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Satisfy&display=swap');
 *{
     margin:0;
     padding: 0;;
@@ -27,7 +27,9 @@ color:white;
 border-radius: 12px;
 animation: slideUp 1.6s ease-out  ;
 transition: box-shadow 0.6s ease-in-out;
-
+/* display: flex; */
+/* justify-content: center; */
+/* align-items: center; */
 }
 
 .loginContainer:hover,.registerContainer:hover{
@@ -143,4 +145,30 @@ h3{
         opacity:0;
     }
 
+}
+
+#heading{
+    position: absolute;
+    color: yellow;
+    /* text-align: center; */
+    top: 71px;
+    left: 666px;
+    font-family: 'Satisfy', cursive;
+    font-size: 45px;
+}
+
+/* img{
+    height: fit-content;
+    width: fit-content;
+} */
+.left{
+    position: absolute;
+    top: 230px;
+    left: 470px;
+    /* width: 300px
+    height: 200px; */
+    height: 243px;
+    width: 256px;
+    border: 3px solid black;
+    border-radius: 50%;
 }
