--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,15 +13,15 @@
     <h1 id="heading">FOCUSPRO</h1>
     <div class="loginContainer">
         <div class="left">
-            <img src="https://media.tenor.com/fEyZrLV4q8IAAAAC/tree-plant.gif" alt="sorry">
+            <img src="https://media.tenor.com/fEyZrLV4q8IAAAAC/tree-plant.gif" alt="sorry" class="gifForAuthPages">
         </div>
         <div class="right">
             <form action="/login" method="post">
                 <input class= "element" type="email" placeholder="Enter Email" name="email" required>
                 <input class= "element" type="password" placeholder="Enter Password" name="password" required>
                 <button class= "element" type="submit"><h3>Login</h3></button>
+                <a href="/register">Don't have an account?</a>
             </form>
-            <a href="/register">Don't have an account?</a>
         </div>
     </div>
     
