some basic changes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,13 +14,21 @@
         <span></span>
         <span></span>
     </div>
+    <div id="seeds">
+        
+    </div>
 
     <div id="menu" >
         <div class="options">
             <ul class="optionsList">
-                <li>Home</li>
+                <li>Forest</li>
+                <li>Timeline</li>
+                <li>Tags</li>
+                <li>Friends</li>
+                <li>Achievements</li>
+                <li>Store</li>
                 <li>About</li>
-                <li>App</li>
+                <li>Settings</li>
                 <li>
                     <form action="/logout" method="post">
 
