--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Open+Sans&family=Satisfy&display=swap');
+
 h1 {
     font-family: 'Courier New', Courier, monospace;
     color: red;
@@ -8,7 +10,11 @@ h1 {
     padding: 0;
 }
 
-
+body{
+    /* background-image: linear-gradient( 135deg, #50aa8d 40%, #2f5e4e 100%); */
+    background-color: #50aa8d;
+    /* background-image: linear-gradient(#50aa8d, #2f5e4e); */
+}
 #menu {
 
     background-color: turquoise;
@@ -38,18 +44,19 @@ h1 {
 #menu ul li {
     text-decoration: none;
     list-style: none;
-    font-size: 5vh;
-    margin: 2rem 0;
+    font-size: 4.5vh;
+    margin: 1.5rem;
     cursor: pointer;
     transition: all 0.4s;
     text-shadow: 1px 1px 3px white;
+    
 }
 
 #logoutBtn {
-    font-size: 4vh;
+    font-size: 4.5vh;
     background-color: transparent;
     text-shadow: 1px 1px 3px white;
-
+    font-family: 'Times New Roman';
     text-align: left;
     border: none;
     margin-right: 10px;
@@ -78,8 +85,8 @@ h1 {
 #sidemenuButton{
     z-index: 19;
     position:absolute;
-    left:10px;
-
+    left:15px;
+    top: 15px;
     width: 5%;
     height: 30px;
     display: flex;
