--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,9 +15,14 @@
         <span></span>
     </div>
     <div id="seeds">
+       
+    </div>
+    <div id="number">
+
+    </div>
+    <div class="centre">
         
     </div>
-
     <div id="menu" >
         <div class="options">
             <ul class="optionsList">
