--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,8 +20,11 @@
     <div id="number">
 
     </div>
-    <div class="centre">
-        
+    <div class="container">
+        <div class="circle">
+            
+        </div>
+        <div id="plant"><h3>PLANT</h3></div>
     </div>
     <div id="menu" >
         <div class="options">
