--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -167,3 +167,37 @@ body{
 #sidemenuButton:hover {
     color: white;
 }
+
+.slider .rs-container{
+    box-shadow: 0px 10px 25px #282828a0,0px 0px 20px #424141b8;
+    border-radius: 50%;
+}
+
+/* colors inner circle */
+.slider .rs-bg-color{
+
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    box-shadow: 
+    inset 0 -5px 15px #0000006a,
+    inset 0 5px 15px #11111183;
+}
+
+.slider .rs-handle{
+    background-image: linear-gradient( 179deg,  rgba(0,0,0,1) 9.2%, rgba(127,16,16,1) 103.9% );
+}
+.slider .rs-range-color{
+    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
+   
+}
+.slider .rs-border{
+   /* border:4px solid #FFEE58 */
+   border:2px solid green
+   
+}
+.slider .rs-tooltip-text{
+   /* border:4px solid #FFEE58 */
+   font-size: 3rem;
+   color:white;
+
+}
