--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productimer</title>
+    <link rel="stylesheet" href="slider.css">
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="navicon.css">
+  
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+                                    
+    <link href="https://cdn.jsdelivr.net/npm/round-slider@1.6.1/dist/roundslider.min.css" rel="stylesheet" />
+                                        
+    <script src="https://cdn.jsdelivr.net/npm/round-slider@1.6.1/dist/roundslider.min.js"></script>
+    
+
+  
 </head>
 <body>
 
@@ -21,9 +31,11 @@
 
     </div>
     <div class="container">
-        <div class="circle">
+        <!-- <div class="circle"> -->
             
-        </div>
+            <div id="slider" class="slider"></div>
+            
+        <!-- </div> -->
         <div id="plant"><h3>PLANT</h3></div>
     </div>
     <div id="menu" >
@@ -53,15 +65,32 @@
     </div>
 
     
-    <script>
+    <script >
        const toggleMenu = ()=>{
         const menu = document.getElementById("menu");
         menu.classList.toggle('menuToggle')
        }
-
-
-
-
     </script>
+
+
+    <script>
+        $("#slider").roundSlider({
+    radius: 135,
+    sliderType: "min-range",
+    value: 45,
+    handleSize:20,
+    width:22,
+    min:15,
+    max:180,
+    step:5
+
+});
+    </script>
+
+
+
+    
+</script>
+   
 </body>
 </html>
