--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -193,11 +193,12 @@ body{
 .slider .rs-border{
    /* border:4px solid #FFEE58 */
    border:2px solid green
-   
+
 }
 .slider .rs-tooltip-text{
    /* border:4px solid #FFEE58 */
    font-size: 3rem;
    color:white;
+   text-shadow: 0px 0px 5px white;
 
 }
