--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,11 +31,13 @@
 
     </div>
     <div class="container">
-        <!-- <div class="circle"> -->
+      
+            <div class="sliderContainer">
+
+                <div id="slider" class="slider"></div>
+            </div>
             
-            <div id="slider" class="slider"></div>
-            
-        <!-- </div> -->
+       
         <div id="plant"><h3>PLANT</h3></div>
     </div>
     <div id="menu" >
