--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -65,14 +65,7 @@ body{
     transition:all 0.44s;
     cursor:pointer;
 }
-.circle{
-    height: 230px;
-    width: 230px; 
-    border-radius: 50%;
-    background-color:#FFF59D;
-    border: 12px solid #FFEB3B;
-    padding: 15px;
-}
+
 
 #plant h3:hover{
     color: white;
@@ -174,10 +167,27 @@ body{
     color: white;
 }
 
+.sliderContainer{
+    animation:upDown 0.7s alternate infinite ease-in-out;
+    transition: all 0.5s;
+}
+@keyframes upDown {
+    to{
+        transform: translateY(-12px);
+    }
+    
+}
+.sliderContainer:hover{
+    transform: translateY(0);
+    animation:none;
+    
+}
+
 .slider .rs-container{
     box-shadow: 0px 10px 25px #282828a0,0px 0px 20px #424141b8;
     border-radius: 50%;
 }
+
 
 /* colors inner circle */
 .slider .rs-bg-color{
