--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -61,10 +61,15 @@ body{
     transition:all 0.4s;
     cursor:pointer;
 }
+
+
 #plant h3{
     transition:all 0.44s;
     cursor:pointer;
 }
+#plant:active ,#plant h3:active{
+    opacity:0.7;
+    }
 
 
 #plant h3:hover{
@@ -216,5 +221,6 @@ body{
    font-size: 3rem;
    color:white;
    text-shadow: 0px 0px 5px white;
+   border:0.7px solid white;
 
 }
