--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -218,9 +218,15 @@ body{
 }
 .slider .rs-tooltip-text{
    /* border:4px solid #FFEE58 */
+   text-align: center;
    font-size: 3rem;
    color:white;
    text-shadow: 0px 0px 5px white;
    border:0.7px solid white;
+   
 
+}
+
+.showTime{
+    margin-left:-55px;
 }
