--- a/views/home.ejs
+++ b/views/home.ejs
@@ -78,13 +78,16 @@
     <script>
 
 let currentDuration=0;
+let isPlanted = false;
+
+
         $("#slider").roundSlider({
     radius: 135,
     sliderType: "min-range",
     value: 45,
     handleSize:20,
     width:22,
-    min:15,
+    min:0,
     max:180,
     step:1,
     create: "traceEvent",
@@ -103,23 +106,34 @@ function traceEvent(e) {
 }
 
     const plantBtn = document.getElementById("plant");
+    const timeDisplay = document.querySelector('.rs-tooltip-text');
+    
     plantBtn.addEventListener("click",()=>{
-        let durationInSeconds = currentDuration*60;
-        
-      
-        const timer = setInterval(() => {
+        if(!isPlanted){
+            timeDisplay.style.paddingRight = '70px'
+            timeDisplay.style.border = 'none'
 
-        let displaySeconds = durationInSeconds%60;
-
-        let displayMinutes = Math.floor(durationInSeconds/60); 
-
-        durationInSeconds--;
-
-        console.log(displayMinutes+":"+displaySeconds);
-            if(durationInSeconds<=0){
-                clearInterval(timer)
-            }
-         }, 1000);
+            //tree is not planted, so plant it now
+            let durationInSeconds = currentDuration*60;
+            
+            
+            const timer = setInterval(() => {
+                
+                let displaySeconds = durationInSeconds%60;
+                
+                let displayMinutes = Math.floor(durationInSeconds/60); 
+                
+                durationInSeconds--;
+                $("#slider").roundSlider({
+                    value:displayMinutes
+                })
+                
+                timeDisplay.innerText = `${displayMinutes}:${displaySeconds}`
+                if(durationInSeconds<=0){
+                    clearInterval(timer)
+                }
+            }, 1000);
+        }
        
         
 
