--- a/views/home.ejs
+++ b/views/home.ejs
@@ -77,8 +77,9 @@
 
     <script>
 
-let currentDuration=0;
+let selectedDuration=0;
 let isPlanted = false;
+let timer;
 
 
         $("#slider").roundSlider({
@@ -101,39 +102,92 @@ let isPlanted = false;
 
 
 function traceEvent(e) {
-   currentDuration= e.value;
-   console.log("currDur:",currentDuration)
+   selectedDuration= e.value;
+   console.log("currDur:",selectedDuration)
+}
+
+function padWithLeadingZeros(num, totalLength) {
+  return String(num).padStart(totalLength, '0');
 }
 
     const plantBtn = document.getElementById("plant");
     const timeDisplay = document.querySelector('.rs-tooltip-text');
     
     plantBtn.addEventListener("click",()=>{
-        if(!isPlanted){
+        if(isPlanted===false){
+            isPlanted=true;
+            plantBtn.innerText="Kill Plant😔"
+            plantBtn.style.color="red"
+            plantBtn.style.fontWeight="bold"
             timeDisplay.style.paddingRight = '70px'
             timeDisplay.style.border = 'none'
 
             //tree is not planted, so plant it now
-            let durationInSeconds = currentDuration*60;
+            let durationInSeconds = selectedDuration*60;
             
             
-            const timer = setInterval(() => {
+             timer = setInterval(() => {
                 
-                let displaySeconds = durationInSeconds%60;
+                let Seconds = durationInSeconds%60;
                 
-                let displayMinutes = Math.floor(durationInSeconds/60); 
+                let Minutes = Math.floor(durationInSeconds/60); 
+
+                let SecondsString = padWithLeadingZeros(Seconds,2)
+                
                 
                 durationInSeconds--;
                 $("#slider").roundSlider({
-                    value:displayMinutes
+                    value:Minutes,
+                    step:0.1,
+                    max:selectedDuration,
+                    min:0
                 })
                 
-                timeDisplay.innerText = `${displayMinutes}:${displaySeconds}`
+                timeDisplay.innerText = `${Minutes}:${SecondsString}`
                 if(durationInSeconds<=0){
                     clearInterval(timer)
                 }
             }, 1000);
+           
         }
+        else{
+            clearInterval(timer);
+            timeDisplay.style.paddingRight = '5px'
+            timeDisplay.style.marginLeft = '-32px'
+            timeDisplay.style.border = '1px solid white'
+
+            isPlanted=false;
+            plantBtn.innerText="Plant"
+            plantBtn.style.color="blue"
+            $("#slider").roundSlider({
+             radius: 135,
+            sliderType: "min-range",
+            value: 45,
+            handleSize:20,
+            width:22,
+            min:0,
+            max:180,
+            step:1,
+            create: "traceEvent",
+            start:"traceEvent",
+            stop: "traceEvent",
+            change:"traceEvent"
+   
+
+
+});
+
+
+
+
+        }
+        
+      
+   
+
+
+});
+        
        
         
 
@@ -142,7 +196,7 @@ function traceEvent(e) {
 
 
 
-    })
+    
 
     </script>
 
