--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -187,3 +187,37 @@ h3{
     align-items: center;
 }
 
+@media only screen and (max-width: 820px) {
+    body {
+      background-color: lightblue;
+      overflow-y: scroll;
+    }
+    .loginContainer{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 60vh;
+        width: 60vw;
+    }
+    .element{
+        font-size: 1.2rem;
+        width:40vw
+    }
+    .right{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .left>img{
+        height: 20vw;
+        width: 20vw;
+    }
+    .left{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0;;
+    }
+  }
