--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,6 +39,10 @@
             
        
         <button id="plant"><h3>PLANT</h3></button>
+        <h2 id="homeQuote">
+            <%=message %>
+        </h2>
+
     </div>
     <div id="menu" >
         <div class="options">
