--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -232,11 +232,60 @@ body{
 }
 
 #homeQuote{
-    text-shadow: 0px 0px 6px white;
+    color:rgb(0, 0, 0);
+    text-shadow: 0px 0px 3px white;
     font-size: 1.44vw;
     width:50%;
     text-align: center;
     height: 10vh;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   transition: all 0.3s;
    
-   
+}
+#homeQuote:hover{
+    color:aqua;
+    cursor:pointer;
+    text-shadow: 1px 1px 0px black;
+}
+
+.glideDown{
+    top:-15rem;
+    color:white;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:40%;
+    height: 10%;
+    background-color: black;
+    animation:comeDown 5s  ease-in-out;
+    position:absolute;
+    border-radius: 12px;
+    box-shadow: 1px 1px 6px black;
+}
+
+@keyframes comeDown {
+ 0%{
+    display: block;
+    top:-10rem;
+
+ }
+ 25%{
+    display: block;
+
+    top:0rem;
+
+ }
+ 50%{
+    display: block;
+
+    top:0rem;
+
+ }
+ 75%{
+    display: none;
+
+    top:-10rem;
+
+ }
 }
