--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -253,6 +253,7 @@ body{
 
 .glideDown{
     top:-10rem;
+    z-index: 100;
     color:greenyellow;
     font-size: 1.5rem;
     text-align: center;
@@ -260,7 +261,7 @@ body{
     justify-content: center;
     align-items: center;
     width:40%;
-    height: 10%;
+    height: 10%;;
     background-color: black;
     animation:comeDown 7s  ease-in-out;
     position:absolute;
