added option button ui

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,9 @@
 
     </div>
     <div class="container">
-      
+            <div id="options">
+                |
+            </div>
             <div class="sliderContainer">
 
                 <div id="slider" class="slider"></div>
