--- a/views/home.ejs
+++ b/views/home.ejs
@@ -79,10 +79,9 @@
        const toggleMenu = ()=>{
         const menu = document.getElementById("menu");
         menu.classList.toggle('menuToggle')
-        
-
-       
-       }
+        const container = document.querySelector(".container");
+        container.classList.toggle("blurredContainer");
+        }
     </script>
 
 
