--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -61,6 +61,8 @@ body{
     text-align: center;
     color: blue;
     margin-bottom: 80px;
+    display: flex;
+    justify-content: space-evenly;
 }
 #plant{
     height: 50px;
@@ -174,6 +176,17 @@ body{
     justify-content: space-evenly;
     cursor: pointer;
 }
+.timer img{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
+
+.stopwatch img{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
 
 #sidemenuButton span {
     width: 40%;
@@ -216,7 +229,7 @@ body{
 .slider .rs-bg-color{
 
     background-color: #00e9366c;
-    background-image: linear-gradient(160deg, #CDDC39 0%, #2f5e4e 100%);
+    background: radial-gradient(circle at 1.8% 4.8%, rgb(17, 23, 58) 0%, rgb(58, 85, 148) 90%);
     box-shadow: 
     inset 0 -5px 15px #0000006a,
     inset 0 5px 15px #11111183;
