--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,7 +25,7 @@
         <span></span>
     </div>
     <div id="seeds">
-       
+       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKL_slomTCoWQEHBh7P4acfP26NclZXe8giA&usqp=CAU" alt="sorry">
     </div>
     <div id="number">
 
